[pom] Add profile and add opens