@@ -923,4 +923,16 @@
             </plugins>
         </pluginManagement>
     </build>
+
+    <profiles>
+        <profile>
+            <id>jdk17on</id>
+            <activation>
+                <jdk>[17,)</jdk>
+            </activation>
+            <properties>
+                <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+            </properties>
+        </profile>
+    </profiles>
 </project>
